Store API keys using libsecret

--- a/src/views/verse_preferences.ui
+++ b/src/views/verse_preferences.ui
@@ -18,18 +18,21 @@
               <object class="AdwPasswordEntryRow" id="client_id_row">
                 <property name="title" translatable="yes">Client ID</property>
                 <property name="show-apply-button">True</property>
+                <signal name="apply" handler="client_id_row_applied_cb"/>
               </object>
             </child>
             <child>
               <object class="AdwPasswordEntryRow" id="client_secret_row">
                 <property name="title" translatable="yes">Client Secret</property>
                 <property name="show-apply-button">True</property>
+                <signal name="apply" handler="client_secret_row_applied_cb"/>
               </object>
             </child>
             <child>
               <object class="AdwPasswordEntryRow" id="refresh_token_row">
                 <property name="title" translatable="yes">Refresh Token</property>
                 <property name="show-apply-button">True</property>
+                <signal name="apply" handler="refresh_token_row_applied_cb"/>
               </object>
             </child>
           </object>
@@ -41,6 +44,7 @@
               <object class="AdwPasswordEntryRow" id="genius_token_row">
                 <property name="title" translatable="yes">Genius Token</property>
                 <property name="show-apply-button">True</property>
+                <signal name="apply" handler="genius_token_row_applied_cb"/>
               </object>
             </child>
           </object>
