--- a/src/views/verse_preferences.ui
+++ b/src/views/verse_preferences.ui
@@ -15,14 +15,14 @@
             <property name="title" translatable="yes">Spotify</property>
             <child>
               <object class="AdwPasswordEntryRow" id="client_id_row">
-                <property name="title" translatable="yes">CLIENT_ID</property>
+                <property name="title" translatable="yes">Client ID</property>
                 <property name="show-apply-button">True</property>
                 <signal name="apply" handler="client_id_row_applied_cb"/>
               </object>
             </child>
             <child>
               <object class="AdwPasswordEntryRow" id="client_secret_row">
-                <property name="title" translatable="yes">CLIENT_SECRET</property>
+                <property name="title" translatable="yes">Client secret</property>
                 <property name="show-apply-button">True</property>
                 <signal name="apply" handler="client_secret_row_applied_cb"/>
               </object>
@@ -52,7 +52,7 @@
             <property name="title" translatable="yes">Genius</property>
             <child>
               <object class="AdwPasswordEntryRow" id="genius_token_row">
-                <property name="title" translatable="yes">GENIUS_TOKEN</property>
+                <property name="title" translatable="yes">Genius token</property>
                 <property name="show-apply-button">True</property>
                 <signal name="apply" handler="genius_token_row_applied_cb"/>
               </object>
